[package]
name = "smoltimeout"
description = "A way to poll a future until it or a timer completes."
version = "0.6.3"
repository = "https://github.com/delta4chat/smol-timeout"
documentation = "https://docs.rs/smoltimeout"
keywords = ["async", "await", "future", "futures"]
categories = ["asynchronous", "concurrency"]
readme = "README.md"
license = "MPL-2.0"
authors = ["Matthieu Le brazidec (r3v2d0g) <r3v2d0g@jesus.gg>", "Delta4 <156182500+delta4chat@users.noreply.github.com>"]
edition = "2021"

[dependencies]
async-io = "2.4.0"
pin-project-lite = "0.2.15"

[dev-dependencies]
futures-lite = "2.5.0"
